code/tui/snapshots/fullscreen/state/dictation_download_cancelled_fullscreen_zh.snap
---
source: code/tui/src/app/state_tests.rs
expression: render_dictation_frame(&app)
---
  .                                                                   [仪 表 盘 ]  
                                                                                
> /voice                                                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                  听 写 已 停 止 。   
  ────────────────────────────────────────────────────────────────────────────  
  > keep draft                                                                  
  ────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                
  ⏸ 手 动
