code/tui/snapshots/fullscreen/state/dictation_partial_draft.snap
---
source: code/tui/src/app/state_tests.rs
expression: render_dictation_frame(&app)
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  Dictation · listening · ctrl+c to stop dictation                              
  ────────────────────────────────────────────────────────────────────────────  
  > Draft hello                                                                 
  ─────────────────────────────────────────────────────────── Automatic model   
  ⏸ Manual                                                                      
  Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
