code/tui/snapshots/fullscreen/state/dictation_preparation_with_running_turn.snap
---
source: code/tui/src/app/state_tests.rs
expression: rendered
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
⠋ Working... · 0s                                                               
  Dictation · loading model · ctrl+c to stop dictation                          
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  ⏸ Manual · ← Dashboard
