code/tui/snapshots/fullscreen/state/dictation_ready_to_review.snap
---
source: code/tui/src/app/state_tests.rs
expression: render_dictation_frame(&app)
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                            Dictation stopped.  
  ────────────────────────────────────────────────────────────────────────────  
  > Please fix the parser and run tests                                         
  ─────────────────────────────────────────────────────────── Automatic model   
  ⏸ Manual                                                                      
                            Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
