code/tui/snapshots/fullscreen/state/dictation_stopping_with_running_turn.snap
---
source: code/tui/src/app/state_tests.rs
expression: render_dictation_frame(&app)
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
⠋ Working... · 0s                                                               
  Dictation · stopping                                                          
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  ⏸ Manual · ← Dashboard
