code/tui/snapshots/fullscreen/state/kimi_subscription_error_dialog.snap
---
source: code/tui/src/app/state_tests.rs
expression: screen
---
  .                                                                                   [仪表盘]








          ┌── Kimi › 错误 ───────────────────────────────────────────────────────[✗]─┐
          │                                                                          │
          │  Kimi token exchange failed with HTTP 400                                │
          │                                                                          │
          │  Enter/Esc 关闭                                                          │
          └──────────────────────────────────────────────────────────────────────────┘




  ────────────────────────────────────────────────────────────────────────────────────────────
  > 构建任何内容
  ────────────────────────────────────────────────────────────────────────────────── 自动模型
