code/tui/snapshots/fullscreen/state/kimi_subscription_signed_out_chinese.snap
---
source: code/tui/src/app/state_tests.rs
expression: "crate::app::usage_tests::render(&app, 96, 24)"
---
  .                                                                                   [仪表盘]

            ┌── 配置 › Kimi ───────────────────────────────────────────────────[✗]─┐
            │                                                                      │
            │> 登录 Kimi                                                           │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ──────────│  Esc 返回                                                            │──────────
  > 构建任何└──────────────────────────────────────────────────────────────────────┘
  ────────────────────────────────────────────────────────────────────────────────── 自动模型
